--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#hello_world
+
+I'm Drexler and I love coding.
+I know little of python, SQL and php
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
